package MachineCoding_LLD.LLD_Interview_Problems._06_Medium_ElevatorSystem;

public enum Direction {
    UP, DOWN, IDLE
}
